IF(SQ_CXX)
  IF(QT4_FOUND)
     FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui REQUIRED)
     INCLUDE(${QT_USE_FILE})
     
     QT4_WRAP_CPP(SequantoAutomation_QT_APPLICATION_AUTOMATION_EVENT_FILTER_MOC include/sequanto/QtApplicationAutomationEventFilter.h)
     QT4_WRAP_CPP(SequantoAutomation_QT_WIDGET_AUTOMATION_EVENT_FILTER_MOC include/sequanto/QtWidgetAutomationEventFilter.h)
     QT4_WRAP_CPP(SequantoAutomation_QT_PROPERTY_CHANGED_NOTIFICATION_ADAPTER_MOC include/sequanto/QtPropertyChangedNotificationAdapter.h)

     SET(QT_SRCS_WITHOUT_MOCK src/QtWrapper.cxx
                              src/QtWidgetAutomationEventFilter.cxx
                              src/QtApplicationAutomationEventFilter.cxx
                              src/QtWidgetNode.cxx
                              src/QtAutomationGetPropertyEvent.cxx
                              src/QtAutomationMoveEvent.cxx
                              src/QtAutomationResizeEvent.cxx
                              src/QtAutomationMouseMoveEvent.cxx
                              src/QtAutomationMouseClickEvent.cxx
                              src/QtAutomationChildAddedEvent.cxx
                              src/QtAutomationWidgetCreatedEvent.cxx
                              src/QtUiTypeProperty.cxx
                              src/QtStringProperty.cxx
                              src/QtIntegerProperty.cxx
                              src/QtBooleanProperty.cxx
                              src/QtColorProperty.cxx
                              src/QtMouseClickMethod.cxx
                              src/QtMouseMoveMethod.cxx
                              src/QtActiveWindowProperty.cxx
                              src/QtScrollBarProperty.cxx
                              src/QtAutoGeneratedNameProperty.cxx
                              src/QtNativeIdProperty.cxx
                              src/QtGlobalPositionProperty.cxx
                              src/QtScreenPositionProperty.cxx
                              src/QtMethod2Parameters.cxx
                              src/QtMoveMethod.cxx
                              src/QtResizeMethod.cxx
                              src/QtInputMethod.cxx
                              src/QtPropertyChangedNotificationAdapter.cxx
                              src/QtUnnamedObjectStore.cxx
                              src/QtCache.cxx
                              src/QtCachedProperty.cxx
                              src/QtUpdateCacheEvent.cxx
                              src/QtAutomationDelayedDoneEvent.cxx
                              src/QtTableRowsProperty.cxx
                              src/QtTableColumnsProperty.cxx
                              src/QtTableCellTextMethod.cxx
                              src/QtTableRowHeightMethod.cxx
                              src/QtTableColumnWidthMethod.cxx
                              src/QtTableUpdateProperty.cxx
                              src/QtTableRowHeaderHeightProperty.cxx
                              src/QtTableColumnHeaderWidthProperty.cxx
                              src/QtTableRowHeaderMethod.cxx
                              src/QtTableColumnHeaderMethod.cxx
                              src/QtStatsProperties.cxx)

     SET(QT_SRCS ${QT_SRCS_WITHOUT_MOCK}
                 ${SequantoAutomation_QT_APPLICATION_AUTOMATION_EVENT_FILTER_MOC}
                 ${SequantoAutomation_QT_WIDGET_AUTOMATION_EVENT_FILTER_MOC}
                 ${SequantoAutomation_QT_PROPERTY_CHANGED_NOTIFICATION_ADAPTER_MOC})
     
     SET(QT_HEADERS include/sequanto/QtWrapper.h
                    include/sequanto/QtWidgetAutomationEventFilter.h
                    include/sequanto/QtApplicationAutomationEventFilter.h
                    include/sequanto/QtWidgetNode.h
                    include/sequanto/QtAutomationGetPropertyEvent.h
                    include/sequanto/QtAutomationResizeEvent.h
                    include/sequanto/QtAutomationMoveEvent.h
                    include/sequanto/QtAutomationMouseMoveEvent.h
                    include/sequanto/QtAutomationMouseClickEvent.h
                    include/sequanto/QtAutomationChildAddedEvent.h
                    include/sequanto/QtAutomationWidgetCreatedEvent.h
                    include/sequanto/QtUiTypeProperty.h
                    include/sequanto/QtStringProperty.h
                    include/sequanto/QtIntegerProperty.h
                    include/sequanto/QtBooleanProperty.h
                    include/sequanto/QtColorProperty.h
                    include/sequanto/QtMouseClickMethod.h
                    include/sequanto/QtMouseMoveMethod.h
                    include/sequanto/QtActiveWindowProperty.h
                    include/sequanto/QtScrollBarProperty.h
                    include/sequanto/QtAutoGeneratedNameProperty.h
                    include/sequanto/QtNativeIdProperty.h
                    include/sequanto/QtGlobalPositionProperty.h
                    include/sequanto/QtScreenPositionProperty.h
                    include/sequanto/QtMethod2Parameters.h
                    include/sequanto/QtMoveMethod.h
                    include/sequanto/QtResizeMethod.h
                    include/sequanto/QtInputMethod.h
                    include/sequanto/QtPropertyChangedNotificationAdapter.h
                    include/sequanto/QtUnnamedObjectStore.h
                    include/sequanto/QtCache.h
                    include/sequanto/QtCachedProperty.h
                    include/sequanto/QtUpdateCacheEvent.h
                    include/sequanto/QtAutomationEventWithSynchronization.h
                    include/sequanto/QtAutomationDelayedDoneEvent.h
                    include/sequanto/QtTableRowsProperty.h
                    include/sequanto/QtTableColumnsProperty.h
                    include/sequanto/QtTableCellTextMethod.h
                    include/sequanto/QtTableRowHeightMethod.h
                    include/sequanto/QtTableColumnWidthMethod.h
                    include/sequanto/QtTableUpdateProperty.h
                    include/sequanto/QtTableRowHeaderHeightProperty.h
                    include/sequanto/QtTableColumnHeaderWidthProperty.h
                    include/sequanto/QtTableRowHeaderMethod.h
                    include/sequanto/QtTableColumnHeaderMethod.h
                    include/sequanto/QtStatsProperties.h)
                  
     STRING(REPLACE ";" ";qt/" QT_SRCS_ALL "${QT_SRCS_WITHOUT_MOCK}")
     SET(SQ_ALL_SRCS ${SQ_ALL_SRCS} "qt/${QT_SRCS_ALL}" CACHE INTERNAL "All source files")
     
     ADD_LIBRARY(SequantoAutomation_QT STATIC ${QT_SRCS} ${QT_HEADERS})
     TARGET_LINK_LIBRARIES(SequantoAutomation_QT SequantoAutomation_CXX)
     TARGET_LINK_LIBRARIES(SequantoAutomation_QT ${QT_LIBRARIES})
    
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/c/include)
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/cxx/include)
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/qt/include)
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/generated)
     
     ADD_SUBDIRECTORY(examples)
     
     IF(SQ_GENERATE_QMAKE)
       STRING(REPLACE ";" " \\\n        " QT_SRCS_REPLACED "${QT_SRCS_WITHOUT_MOCK}")
       STRING(REPLACE ";" " \\\n           " QT_HEADERS_REPLACED "${QT_HEADERS}")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "# QT files\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "QT_SRCS=${QT_SRCS_REPLACED}\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "QT_HEADERS=${QT_HEADERS_REPLACED}\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "# Putting it all together\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "TEMPLATE=lib\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "SOURCES+=\$\${C_SRCS} \$\${CXX_SRCS} \$\${QT_SRCS}\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "HEADERS+=\$\${C_HEADERS} \$\${CXX_HEADERS} \$\${QT_HEADERS}\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "INCLUDEPATH+=include\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "win32:LIBS+=WS2_32.lib\n")
       FILE(APPEND ${CMAKE_BINARY_DIR}/SequantoAutomation.pro "DEFINES+=SQ_SEQUANTO_AUTOMATION_SOURCE SQ_SEQUANTO_AUTOMATION_SHARED\n")
       
       INSTALL(FILES ${CMAKE_BINARY_DIR}/SequantoAutomation.pro
               DESTINATION .)
       INSTALL(FILES ${CMAKE_BINARY_DIR}/custom.pro
               DESTINATION .)
     ENDIF(SQ_GENERATE_QMAKE)
     
     IF(SQ_INSTALL_BINARY)
       INSTALL(TARGETS SequantoAutomation_QT
               RUNTIME DESTINATION bin
               LIBRARY DESTINATION lib
               ARCHIVE DESTINATION lib)
             
     ENDIF(SQ_INSTALL_BINARY)

     INSTALL(FILES ${QT_HEADERS}
             DESTINATION include/sequanto)

     IF(SQ_INSTALL_SOURCE)
       INSTALL(FILES ${QT_SRCS_WITHOUT_MOCK}
               DESTINATION src)
     ENDIF(SQ_INSTALL_SOURCE)
   ENDIF(QT4_FOUND)
ENDIF(SQ_CXX)
