IF(NOT SQ_ARDUINO)
  SQ_GENERATE(machine machine.automation)
  SET(SOURCES files.c memory.c process.c server.c ${SQ_GENERATE_machine})
  
  IF(SQ_WIN32)  
    IF(SQ_QT_MACHINE_AUTOMATION)
      LIST(APPEND SOURCES process_win32.c windows_qt.cxx)
    ELSE(SQ_QT_MACHINE_AUTOMATION)
      LIST(APPEND SOURCES process_win32.c windows_win32_oleacc.c)
    ENDIF(SQ_QT_MACHINE_AUTOMATION)
  ELSE(SQ_WIN32)
    INCLUDE(FindPkgConfig)

    PKG_CHECK_MODULES(CSPI1 cspi-1.0)
    PKG_CHECK_MODULES(ATSPI2 glib-2.0 atspi-2)
    
    LIST(APPEND SOURCES process_linux.c)

    IF(SQ_QT_MACHINE_AUTOMATION)
      LIST(APPEND SOURCES process_qt.c)
    ELSE(SQ_QT_MACHINE_AUTOMATION)
      IF(ATSPI2_FOUND)
        INCLUDE_DIRECTORIES(${ATSPI2_INCLUDE_DIRS})
        LINK_DIRECTORIES(${ATSPI2_LIBRARY_DIRS})
        SET(CFLAGS ${CFLAGS} ${ATSPI2_CFLAGS})
        SET(LDFLAGS ${LDFLAGS} ${ATSPI2_LDFLAGS})
        LIST(APPEND SOURCES windows_atspi2.c)
      ELSE(ATSPI2_FOUND)
        IF(CSPI1_FOUND)
          INCLUDE_DIRECTORIES(${CSPI1_INCLUDE_DIRS})
          LINK_DIRECTORIES(${CSPI1_LIBRARY_DIRS})
          SET(CFLAGS ${CFLAGS} ${CSPI1_CFLAGS})
          SET(LDFLAGS ${LDFLAGS} ${CSPI1_LDFLAGS})
          LIST(APPEND SOURCES windows_cspi1.0.c)
        ELSE(CSPI1_FOUND)
          LIST(APPEND SOURCES windows.c)
        ENDIF(CSPI1_FOUND)
      ENDIF(ATSPI2_FOUND)
    ENDIF(SQ_QT_MACHINE_AUTOMATION)
  ENDIF(SQ_WIN32)

  IF(SQ_QT_MACHINE_AUTOMATION)
    ADD_LIBRARY(machine_automation ${SOURCES})
    IF(NOT QT4_FOUND)
      ERROR("QT4 must be found for the SQ_QT_MACHINE_AUTOMATION flag to be set.")
    ENDIF(NOT QT4_FOUND)
    
    INCLUDE(${QT_USE_FILE})
    
    TARGET_LINK_LIBRARIES(machine_automation ${QT_LIBRARIES})
  ELSE(SQ_QT_MACHINE_AUTOMATION)
    ADD_EXECUTABLE(machine_automation main.c ${SOURCES})
    
    ADD_CUSTOM_TARGET(runserver ./machine_automation DEPENDS machine_automation)
  ENDIF(SQ_QT_MACHINE_AUTOMATION)
  
  TARGET_LINK_LIBRARIES(machine_automation SequantoAutomation)
  
  IF(SQ_WIN32)  
    TARGET_LINK_LIBRARIES(machine_automation psapi)
    TARGET_LINK_LIBRARIES(machine_automation oleacc)
  ELSE(SQ_WIN32)
    IF(ATSPI2_FOUND)
      TARGET_LINK_LIBRARIES(machine_automation ${ATSPI2_LIBRARIES})
    ELSE(ATSPI2_FOUND)
      IF(CSPI1_FOUND)
        TARGET_LINK_LIBRARIES(machine_automation ${CSPI1_LIBRARIES})
      ENDIF(CSPI1_FOUND)
    ENDIF(ATSPI2_FOUND)
  ENDIF(SQ_WIN32)
ENDIF(NOT SQ_ARDUINO)
